# baritone

./: .ghci  .gitignore  Makefile  baritone.cabal
src/: Main.hs
src/Language/: Baritone.hs  ManuScript.hs
src/Language/Baritone/: Core.hs
src/Language/Baritone/Readers/: Haskell.hs
src/Language/Baritone/Writers/: ManuScript.hs
test/: Foo.core  Foo.hs  Prelude.hs
test/doc/: Foo.html  doc-index.html  index-frames.html  index.html  mini_Foo.html
