
name:           baritone
version:        0.5
cabal-version:  >= 0.14
build-type:     Simple
author:         Hans Hoglund
synopsis:       Functional syntax for Sibelius ManuScript
category:       Language,
tested-with:    GHC


library                    
    build-depends: 
        base, semigroups, containers, haskell-src
    hs-source-dirs: src
    exposed-modules:
        Language.Baritone.Core

executable "baritone"
    hs-source-dirs: src
    main-is: Main.hs
    