
name:           baritone
version:        0.5
build-type:     Simple
author:         Hans Hoglund
synopsis:       Functional syntax for Sibelius ManuScript
category:       Language,
tested-with:    GHC


library                    
    build-depends: 
        base, mtl, semigroups, split, haskell-src, prettify
    hs-source-dirs: src
    exposed-modules:
        Language.ManuScript
        Language.Baritone
        Language.Baritone.Core
        Language.Baritone.Readers.Haskell
        Language.Baritone.Writers.ManuScript

executable "baritone"
    hs-source-dirs: src
    main-is: Main.hs
    